fix a span spacing

--- a/src/screen.css
+++ b/src/screen.css
@@ -138,8 +138,6 @@ nav {
 nav span {
     font-size: 0.75em;
     color: #555;
-    max-height: 0.75em;
-    line-height: 0.75;
 }
 
 
